// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`split tokens with extremes 1`] = `
Array [
  Object {
    "content": "fo",
    "props": Object {},
  },
  Object {
    "content": "o",
    "props": Object {},
  },
  Object {
    "content": "ba",
    "props": Object {},
  },
  Object {
    "content": "r",
    "props": Object {},
  },
]
`;

exports[`split tokens with no extremes 1`] = `
Array [
  Object {
    "content": "foo",
    "props": Object {},
  },
  Object {
    "content": "bar",
    "props": Object {},
  },
]
`;
